# website

./: .gitignore  config.py  pyproject.toml
client_side/: inv_requests.py  inventory_requests.py  main_loop.py  manager_requests.py  money_requests.py  people_requests.py
client_side/website/saved_files/: save_to_manager.py  save_to_money_manage.py  save_to_transaction.py
client_side/website/src/: inventory_abstract.py  person.py  product.py
data/: inventory1.json  items1.json
saved_files/: transaction_abctractor.py  transactions_manager.py
server/: app.py  inventer_server.py  inventory.json  inventory_server.py  items.json  items1.json  manger_server.py  money_server.py  people_server.py  server_exemple.py  server_test.py
server/gpt web/: appp.js  indexx.html  styless.css
server/templates/: home.html
src/: InventoryManage_interface.py  Manager_Abc_interface.py  SQlite_inventory.py  create_db.py  inventory_JSON.py  inventory_SQlite.py  inventory_interface.py  json_inventory.py  manager_SQlite.py  manager_interface.py  money_SQlite.py  money_interface.py  money_manage.py  money_manage_Abc_interface.py  money_manage_SQlite.py  people_SQlite.py  people_interface.py  person.py  product.py  unittest_invemtory_sqlite.py  unittest_inventory.py  unittest_manager_sqlite.py  unittest_money_sqlite.py
src/website.egg-info/: SOURCES.txt  top_level.txt
src/website_shope.egg-info/: PKG-INFO  SOURCES.txt
website.egg-info/: PKG-INFO
