[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "website"            # זה שם החבילה ב-pip בלבד, לא משפיע על import
version = "0.1.0"
description = "My shop management system"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["flask"]

[tool.setuptools]
packages = ["website"]   # ← תחליף ל-שם התיקייה שלך בפועל

